@@ -292,6 +292,9 @@ Optimizations
 * GITHUB#12100: WordBreakSpellChecker.suggestWordBreaks now does a breadth first search, allowing it to return
   better matches with fewer evaluations (hossman)
 
+* GITHUB#13582: Stop requiring MaxScoreBulkScorer's outer window from having at
+  least INNER_WINDOW_SIZE docs. (Adrien Grand)
+
 Changes in runtime behavior
 ---------------------
 
